--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,33 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/httpclient-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-ab-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-nio-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/fluent-hc-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-cache-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpmime-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.7.3.jar" sourcepath="lib/jsoup-1.7.3-sources.jar"/>
+	<classpathentry kind="lib" path="lib/tess4j.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="RiseOfLords"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/ghost4j-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jai_imageio.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="RiseOfLords"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/jna-4.1.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="RiseOfLords"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
