--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,12 @@ $RECYCLE.BIN/
 /.settings
 
 # =========================
+# Gradle Files
+# =========================
+
+/.gradle
+
+# =========================
 # Operating System Files
 # =========================
 
