--- a/.gitignore
+++ b/.gitignore
@@ -14,19 +14,8 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
-# =========================
-# Eclipse Files
-# =========================
-
-/.classpath
-/.project
-/.settings
-
-# =========================
-# Gradle Files
-# =========================
-
-/.gradle
+# Windows shortcuts
+*.lnk
 
 # =========================
 # Operating System Files
@@ -39,14 +28,66 @@ $RECYCLE.BIN/
 .AppleDouble
 .LSOverride
 
-# Icon must ends with two \r.
-Icon
-
 # Thumbnails
 ._*
 
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 /bin/
 /build/
+
+
+# ======================
+# Gradle
+# ======================
+
+.gradle
+build
+
+# ======================
+# Eclipse
+# ======================
+
+*.pydevproject
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# Eclipse Core
+.project
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# TeXlipse plugin
+.texlipse
