Allow missing deployment properties in build.gradle for CI

--- a/build.gradle
+++ b/build.gradle
@@ -55,14 +55,14 @@ artifacts {
 bintrayUpload.dependsOn tasks.launch4j
 
 bintray {
-    user = project.bintrayUsername // taken from gradle.properties
-    key = project.bintrayApiKey // taken from gradle.properties
+    user = project.hasProperty('bintrayUsername') ? project.bintrayUsername : ''
+    key = project.hasProperty('bintrayApiKey') ? project.bintrayApiKey : ''
     configurations = ['archives']
 
     publish = true // the version should be auto published after an upload
 
     pkg {
-        repo = project.bintrayRepoApps // taken from gradle.properties
+        repo = project.hasProperty('bintrayRepoApps') ? project.bintrayRepoApps : ''
         name = project.name
         desc = 'An action sequencer to do the boring tasks on the game http://www.riseoflords.com.'
         labels = ['riseoflords', 'rol', 'bot']
