--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,14 @@ language: java
 
 jdk: oraclejdk8
 
-before_install:
-  - chmod +x gradlew
+# These files change at every build, and should not be cached
+# https://docs.travis-ci.com/user/languages/java/#Caching
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+# Cache Gradle's dependencies and wrapper download
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
