--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'idea'
 apply plugin: 'application'
 
 group = 'org.hildan.bots'
-version = '1.2.0'
+version = '1.3.0'
 description = 'An action sequencer to do the boring tasks on the game http://www.riseoflords.com.'
 
 mainClassName = "org.hildan.bots.riseoflords.RolAutomizer"
@@ -53,7 +53,7 @@ bintrayUpload.dependsOn tasks.launch4j
 
 // used to upload artifacts to the Bintray repo
 bintray {
-    user = project.hasProperty('bintrayUsername') ? project.bintrayUsername : ''
+    user = project.hasProperty('bintrayUser') ? project.bintrayUser : ''
     key = project.hasProperty('bintrayApiKey') ? project.bintrayApiKey : ''
     configurations = ['archives']
 
