--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,7 @@ name: Bot schedule
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "15 10,19 * * *"
   workflow_dispatch:
     inputs: {}
 
