--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,8 +15,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 15
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: 15
 
       - name: Gradle build cache
