--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 angus-mail = "2.0.2"
 clikt = "4.2.1"
 jsoup = "1.16.1"
+junit5 = "5.10.0"
 kotlin = "1.9.10"
 logback-classic = "1.4.11"
 simple-ocr = "1.0.0"
@@ -12,6 +13,8 @@ simple-ocr = "1.0.0"
 angus-mail = { module = "org.eclipse.angus:angus-mail", version.ref = "angus-mail"}
 clikt = { module = "com.github.ajalt.clikt:clikt", version.ref = "clikt"}
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup"}
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit5"}
+junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit5"}
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic"}
 simple-ocr = { module = "org.hildan.ocr:simple-ocr", version.ref = "simple-ocr"}
 
