--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,6 +3,7 @@ name: CI-CD
 on: push
 
 env:
+  DOCKERHUB_USER: hildan
   DOCKER_IMAGE_NAME: rol-automizer
 
 jobs:
@@ -33,12 +34,16 @@ jobs:
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
+        # technically harmless to run, but dependabot doesn't have access to secrets so we avoid the login entirely
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
+        # technically harmless to run, but dependabot doesn't have access to secrets so we avoid the login entirely
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -48,10 +53,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
-          push: true
+          push: ${{ github.ref == 'refs/heads/main' }}
           tags: |
-            ${{ secrets.DOCKERHUB_USER }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-            ${{ secrets.DOCKERHUB_USER }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.DOCKERHUB_USER }}/${{ env.DOCKER_IMAGE_NAME }}:latest
+            ${{ env.DOCKERHUB_USER }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/${{ env.DOCKER_IMAGE_NAME }}:latest
             ghcr.io/${{ github.repository_owner }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
