--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,8 +1,8 @@
 name: Bot schedule
 
 on:
-  schedule:
-    - cron: "15 10,20 * * *"
+  # schedule:
+  #   - cron: "15 10,20 * * *"
   workflow_dispatch:
     inputs: {}
 
