Enable auto-merge for update-gradlew.yml

--- a/.github/workflows/update-gradlew.yml
+++ b/.github/workflows/update-gradlew.yml
@@ -24,3 +24,4 @@ jobs:
         with:
           repo-token: ${{ secrets.GH_PAT }}
           labels: dependencies, internal
+          merge-method: REBASE
